# signal_bot

./: .gitignore  README.md  examle.env  pyproject.toml
signal_bot/: app.py  config.py  repositories.py  start_program_cycle.py
signal_bot/api/: routers.py
signal_bot/bot/: app_bot.py  keyboards.py  utils.py
signal_bot/bot/handlers/: delete_signal_handlers.py  main_handlers.py  signal_handlers.py
signal_bot/parser/: parser_core.py
signal_bot/parser/src/: config.py  processor.py  repositories.py  requests.py  test_response.py  type_column.py
signal_bot/src/: utils.py
signal_bot/src/bot/: handlers.py
